--- a/docs/post/blog/记录.md
+++ b/docs/post/blog/记录.md
@@ -14,7 +14,29 @@ site: false
 现在的站点已经可以访问了，但是还没有完成装饰，摸鱼装修中！！！
 :::
 
-## （：
+## 2025-6-20 第一天：开始建项目
 
-加了很多小细节，我有强迫症,非常爱扣细节！
+制作了简单框架，还弄了个SVG的签名文件展示 🤤
+
+主题切换动画打算用跟 [element](https://element-plus.org/zh-CN/) 官网一样的，但是发现很多人都在用了
+
+既然要做那就弄点不一样的, 我审美不太好，就想逛一些炫酷的网站找灵感，在 [codepen](https://codepen.io/) 看见一个主题切换动画非常得我心，🤤 于是触发被动技能 ctrl+c ctrl+v 复制来用，因为codepen基本都是纯html加css，所以要改成vue版本，小意思，我改改改----，其中小问题也是非常多，不过最后也是搞定了！！！ 不容易💨
+
+## 2025-6-23 加搜索配置 完善首页
+
+添加Algolia搜索
+
+首页加一些装饰
+
+添加了音乐组件
+
+添加了不蒜子访客统计
+
+添加了图片查看器
+
+## 2025-6-24 狂暴模式
+
+一天狂摸，一天加了工具页，标签页、归档页、一些杂七杂八的小细节优化等等。 
+
+有了AI辅助工作效率真滴高啊，加了很多小细节，有点强迫症,扣了很多细节！🤤
 
