--- a/docs/post/blog/记录.md
+++ b/docs/post/blog/记录.md
@@ -20,7 +20,7 @@ site: false
 
 主题切换动画打算用跟 [element](https://element-plus.org/zh-CN/) 官网一样的，但是发现很多人都在用了
 
-既然要做那就弄点不一样的, 我审美不太好，就想逛一些炫酷的网站找灵感，在 [codepen](https://codepen.io/) 看见一个主题切换动画非常得我心，🤤 于是触发被动技能 ctrl+c ctrl+v 复制来用，因为codepen基本都是纯html加css，所以要改成vue版本，小意思，我改改改----，其中小问题也是非常多，不过最后也是搞定了！！！ 不容易💨
+既然要做那就弄点不一样的, 我审美不太好，就想逛一些炫酷的网站找灵感，在 [codepen](https://codepen.io/) 看见一个主题切换动画非常深得我心，🤤 于是触发被动技能 ctrl+c ctrl+v 复制来用，因为codepen基本都是纯html加css，所以要改成vue版本，改的过程中遇到挺多小细节问题，不过最后也是全都搞定了 （：不容易💨
 
 ## 2025-6-23 加搜索配置 完善首页
 
